<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/addTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/add_tag"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/delTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="27dp"
        android:text="@string/delete_tag"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/back"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="121dp"
        android:layout_marginBottom="12dp"
        android:text="@string/bak"
        app:layout_constraintBottom_toTopOf="@+id/imView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.989" />

    <Button
        android:id="@+id/next"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginTop="121dp"
        android:layout_marginBottom="12dp"
        android:text="@string/nxt"
        app:layout_constraintBottom_toTopOf="@+id/imView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imView"
        android:layout_width="395dp"
        android:layout_height="250dp"
        android:layout_marginBottom="3dp"
        android:contentDescription="@android:string/fingerprint_icon_content_description"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/picName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="22dp"
        android:text="@string/picname"
        app:layout_constraintBottom_toTopOf="@+id/imView"
        app:layout_constraintEnd_toStartOf="@+id/next"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ListView
        android:id="@+id/tagList"
        android:layout_width="395dp"
        android:layout_height="130dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toTopOf="@+id/addTag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginEnd="176dp"
        android:layout_marginBottom="5dp"
        android:text="@string/tags"
        app:layout_constraintBottom_toTopOf="@+id/tagList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>