<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/perSearch"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="7dp"
        android:text="@string/search_with_person"
        app:layout_constraintBottom_toTopOf="@+id/orSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/perText" />

    <EditText
        android:id="@+id/perText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="7dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/andSearch"
        app:layout_constraintEnd_toStartOf="@+id/perSearch"
        app:layout_constraintHorizontal_bias="0.63"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/locText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="1dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/locSearch"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/locSearch"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="19dp"
        android:text="@string/search_with_location"
        app:layout_constraintBottom_toTopOf="@+id/perSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/locText" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="336dp"
        android:text="@string/location"
        app:layout_constraintBottom_toTopOf="@+id/locText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginEnd="148dp"
        android:text="@string/person"
        app:layout_constraintBottom_toTopOf="@+id/perText"
        app:layout_constraintEnd_toStartOf="@+id/perSearch" />

    <Button
        android:id="@+id/andSearch"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="4dp"
        android:text="@string/location_and_person"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/orSearch"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/orSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="4dp"
        android:text="@string/location_or_person"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ListView
        android:id="@+id/searchList"
        android:layout_width="395dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>